Fri Aug 27 14:17:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
          Doxygen changes

        * ace/OS_NS_Thread.cpp:
          Use ACE_GUARD

        * bin/fuzz.pl:
          Added check for ACE_Guard

Fri Aug 27 06:56:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/acexml.doxygen:
          Fuzz fixes

Thu Aug 26 13:20:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Added DANCE_ROOT

Thu Aug 26 13:08:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/servers/servers.mpc:
          Use ace_netsvcs as executable name, this makes more sense when
          we install this file in a target directory

Thu Aug 26 13:04:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check doxygen files for tabs

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
        * html/index.html:
          Changed documentation subdirectories to make debian packaging easier

Thu Aug 26 12:30:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/control:
          Made some fixes for x.8.1

Thu Aug 26 11:54:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Extended script to also check for $DANCE_ROOT/bin/dance_tests.lst

Thu Aug 26 10:20:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Changes implementing the patches from Bugzilla #3653 (with
          changes and some rejects; *no* asserts allowed in ACE).

Wed Aug 25 19:58:19 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.{h cpp}: Regarding change number 2 at
          Fri Mar 26 14:07:55 UTC 2010  Steve Huston  <shuston@riverace.com>